objects/License_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Consumed__c</fullName>
        <label>Consumed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consumed_in_percentage__c</fullName>
        <formula>Consumed__c /  Total_License_for_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumed in percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Name_of_License__c</fullName>
        <label>Name of License</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_License_for_Record__c</fullName>
        <formula>IF( Name_of_License__c = &apos;Community Licenses&apos;,  $Setup.UserLicenseConfiguration__c.Total_Community_Licenses__c ,  $Setup.UserLicenseConfiguration__c.Total_Standard_License__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total License for Record</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>License Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Name_of_License__c</columns>
        <columns>Consumed__c</columns>
        <columns>Consumed_in_percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>License Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>